Realtor page rewrite: urgency, story, quantitative
- Opens with 11:47 PM scenario (hook)
- The Math: shows cost of missed leads ($127K/year)
- Timeline with metrics (3 sec response, 98% accuracy, +34% close rate)
- ROI callout: one closing = 8 years of service
- Stripped emojis from both pages
- Kept robot, green timeline aesthetic

--- a/index.html
+++ b/index.html
@@ -4083,15 +4083,15 @@
                     <a href="#services" data-nav>Services</a>
                     <div class="dropdown-menu">
                         <a href="/providence-law-firms-ai">⚖️ Providence Lawyers</a>
-                        <a href="/realtors-ai">🏠 Realtors AI</a>
-                        <a href="/ai-consulting">🤖 AI Consulting</a>
+                        <a href="/realtors-ai"> Realtors AI</a>
+                        <a href="/ai-consulting"> AI Consulting</a>
                         <a href="/it-support">💻 IT Support</a>
                     </div>
                 </li>
                 <li class="nav-dropdown">
                     <a href="products.html" data-nav>Products</a>
                     <div class="dropdown-menu">
-                        <a href="/swiftshot">⚡ SwiftShot</a>
+                        <a href="/swiftshot"> SwiftShot</a>
                         <a href="/draftbridge">📝 DraftBridge</a>
                         <a href="casevault.html">⚖️ CaseVault</a>
                         <a href="products.html">📦 View All Products</a>
@@ -4102,8 +4102,8 @@
                 <li class="nav-dropdown">
                     <a href="#" data-nav>Tools</a>
                     <div class="dropdown-menu">
-                        <a href="/ri-report.html">🏠 RI Real Estate</a>
-                        <a href="/realtors-ai">🤖 Realtors AI</a>
+                        <a href="/ri-report.html"> RI Real Estate</a>
+                        <a href="/realtors-ai"> Realtors AI</a>
                         <a href="/youtube-trends">📊 YouTube Trends</a>
                         <a href="/kb.html">📚 Knowledge Base</a>
                         <a href="/css-tricks.html">🎨 CSS Tricks</a>
@@ -4120,7 +4120,7 @@
                     <a href="games.html" data-nav>Arcade</a>
                     <div class="dropdown-menu">
                         <a href="mouse-game.html">🐭 Mouse Trap!</a>
-                        <a href="rocket-game.html">🚀 Rocket Blaster</a>
+                        <a href="rocket-game.html"> Rocket Blaster</a>
                         <a href="racecar-game.html">🏎️ Apex Drift</a>
                         <a href="dolphin-game.html">🐬 Dolphin Splash!</a>
                         <a href="dino-game.html">🦖 Dino Roam!</a>
@@ -6542,10 +6542,10 @@
         // Node definitions
         const nodes = [
             { x: 50, y: 120, label: 'RSS Feed', icon: '📡', color: '#ff6b35' },
-            { x: 170, y: 120, label: 'Scoring AI', icon: '🤖', color: '#3b82f6' },
+            { x: 170, y: 120, label: 'Scoring AI', icon: '', color: '#3b82f6' },
             { x: 290, y: 120, label: 'Code', icon: '{ }', color: '#3b82f6' },
-            { x: 410, y: 120, label: 'Filter', icon: '⚡', color: '#10b981' },
-            { x: 530, y: 70, label: 'Content AI', icon: '🤖', color: '#3b82f6' },
+            { x: 410, y: 120, label: 'Filter', icon: '', color: '#10b981' },
+            { x: 530, y: 70, label: 'Content AI', icon: '', color: '#3b82f6' },
             { x: 530, y: 170, label: 'Review', icon: '📊', color: '#22c55e' },
             { x: 630, y: 70, label: 'Post', icon: '📤', color: '#1d9bf0' },
         ];
