Add real phone number to realtor page: (401) 327-2971

--- a/realtors-ai.html
+++ b/realtors-ai.html
@@ -578,6 +578,9 @@
             <input type="text" name="phone" placeholder="Phone">
             <button type="submit">Get My AI Assistant</button>
         </form>
+        <p style="margin-top: 1.5rem; color: #555; font-size: 0.9rem;">
+            Or call/text: <a href="tel:4013272971" style="color: #fff;">(401) 327-2971</a>
+        </p>
     </section>
 
     <footer>
