Add viral hooks to all three story pages

--- a/index.html
+++ b/index.html
@@ -4597,6 +4597,9 @@
             <p class="story-text">
                 You've been here before. The hold music. The ticket numbers. The technician who's never heard of your business and asks you to "start from the beginning" every single time.
             </p>
+            <p class="story-text" style="color: #22c55e; font-size: 1.1rem; margin-top: 1.5rem;">
+                I finally fixed the IT nightmares that were ruining my Monday mornings.
+            </p>
             <p class="story-text">
                 There's a reason local IT support still exists. <span class="story-em">Some problems need a person who shows up.</span>
             </p>
