--- a/law-firms.html
+++ b/law-firms.html
@@ -588,6 +588,9 @@
         <p class="text">
             This is how attorneys lose cases. Not in court. At 10 PM, exhausted, missing the one inconsistency buried on page 673 that would have changed everything.
         </p>
+        <p class="text" style="color: #22c55e; font-size: 1.1rem; margin-top: 2rem;">
+            No one talks about how much document review is actually costing you.
+        </p>
         <p class="text">
             It doesn't have to be this way.
         </p>
