--- a/realtors-ai.html
+++ b/realtors-ai.html
@@ -560,6 +560,9 @@
         <p class="text">
             But Sarah doesn't know that. She just knows she needs an answer.
         </p>
+        <p class="text" style="color: #22c55e; font-size: 1.1rem; margin-top: 2rem;">
+            Before you waste another year losing leads to faster agents, try this.
+        </p>
     </section>
 
     <!-- TWO PATHS -->
