--- a/ri-deal-map.html
+++ b/ri-deal-map.html
@@ -13,33 +13,33 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; background: #0f172a; }
+    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; background: #050508; }
     #map { width: 100%; height: 100vh; }
     .deal-popup { font-size: 13px; line-height: 1.5; }
-    .deal-popup h3 { color: #1e40af; margin-bottom: 5px; font-size: 14px; }
-    .deal-popup .price { color: #059669; font-weight: bold; font-size: 16px; }
-    .deal-popup .predicted { color: #6b7280; font-size: 12px; }
-    .deal-popup .score { background: linear-gradient(135deg, #10b981, #059669); color: white; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-top: 5px; }
-    .deal-popup .details { color: #374151; margin-top: 5px; }
-    .deal-popup a { color: #2E1A47; text-decoration: none; display: block; margin-top: 8px; }
+    .deal-popup h3 { color: #333; margin-bottom: 5px; font-size: 14px; }
+    .deal-popup .price { color: #22c55e; font-weight: bold; font-size: 16px; }
+    .deal-popup .predicted { color: #666; font-size: 12px; }
+    .deal-popup .score { background: #22c55e; color: white; padding: 2px 8px; border-radius: 0; font-weight: bold; display: inline-block; margin-top: 5px; }
+    .deal-popup .details { color: #555; margin-top: 5px; }
+    .deal-popup a { color: #22c55e; text-decoration: none; display: block; margin-top: 8px; }
     .deal-popup a:hover { text-decoration: underline; }
-    .deal-popup .status { background: #22c55e; color: white; padding: 2px 6px; border-radius: 4px; font-size: 10px; font-weight: bold; display: inline-block; margin-bottom: 5px; }
-    .legend { position: absolute; bottom: 30px; right: 10px; background: rgba(15,23,42,0.95); padding: 12px 16px; border-radius: 8px; z-index: 1000; color: #e2e8f0; font-size: 12px; border: 1px solid #334155; }
-    .legend h4 { margin-bottom: 8px; color: #f8fafc; }
+    .deal-popup .status { background: #22c55e; color: white; padding: 2px 6px; border-radius: 0; font-size: 10px; font-weight: bold; display: inline-block; margin-bottom: 5px; text-transform: uppercase; letter-spacing: 1px; }
+    .legend { position: absolute; bottom: 30px; right: 10px; background: rgba(5,5,8,0.95); padding: 12px 16px; border-radius: 0; z-index: 1000; color: #ccc; font-size: 12px; border: 1px solid #1a1a1a; }
+    .legend h4 { margin-bottom: 8px; color: #fff; }
     .legend-item { display: flex; align-items: center; margin: 4px 0; }
     .legend-dot { width: 12px; height: 12px; border-radius: 50%; margin-right: 8px; }
-    .legend .note { margin-top: 8px; font-size: 10px; color: #94a3b8; border-top: 1px solid #334155; padding-top: 8px; }
+    .legend .note { margin-top: 8px; font-size: 10px; color: #666; border-top: 1px solid #1a1a1a; padding-top: 8px; }
   </style>
 </head>
 <body>
   <div id="map"></div>
   <div class="legend">
-    <h4>🏠 For Sale Deals</h4>
+    <h4>FOR SALE DEALS</h4>
     <div class="legend-item"><div class="legend-dot" style="background:#22c55e"></div> 40%+ below market</div>
-    <div class="legend-item"><div class="legend-dot" style="background:#eab308"></div> 30-39% below</div>
-    <div class="legend-item"><div class="legend-dot" style="background:#f97316"></div> 20-29% below</div>
-    <div class="legend-item"><div class="legend-dot" style="background:#ef4444"></div> 15-19% below</div>
-    <div class="note">✓ Active MLS listings only<br>Based on city median $/sqft</div>
+    <div class="legend-item"><div class="legend-dot" style="background:#888"></div> 30-39% below</div>
+    <div class="legend-item"><div class="legend-dot" style="background:#666"></div> 20-29% below</div>
+    <div class="legend-item"><div class="legend-dot" style="background:#444"></div> 15-19% below</div>
+    <div class="note">Active MLS listings only<br>Based on city median $/sqft</div>
   </div>
   
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
@@ -55,9 +55,9 @@
 
     function getColor(score) {
       if (score >= 40) return '#22c55e';
-      if (score >= 30) return '#eab308';
-      if (score >= 20) return '#f97316';
-      return '#ef4444';
+      if (score >= 30) return '#888';
+      if (score >= 20) return '#666';
+      return '#444';
     }
 
     function formatPrice(p) {
