SEO improvements: meta tags, schema.org, RI IT support blog post

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Solutions for Small Business | AIBridges — Cranston, RI</title>
-    <meta name="description" content="AI consulting in Providence RI — custom AI agents, automation, private AI deployment, and IT support for Rhode Island businesses. Based in Cranston. Free strategy call.">
-    <meta name="keywords" content="ai consulting providence ri, local tech support providence, realtor ai tools, realtor tools providence, ai solutions rhode island, it support rhode island, ai automation cranston, youtube trends dashboard, ai agents providence, computer repair providence ri, real estate ai rhode island">
-    <meta name="keywords" content="AI solutions for business Rhode Island, AI consulting Cranston RI, law firm AI tools, private AI deployment, local AI models, business automation Rhode Island, IT support Cranston RI, AI document processing law firm">
+    <title>AIBridges | IT Support & AI Consulting in Providence RI</title>
+    <meta name="description" content="AIBridges provides IT support, computer repair, and AI consulting for small businesses in Providence, Cranston, Warwick, and all of Rhode Island. Local tech support that answers in under a minute. Call (401) 327-2971.">
+    <meta name="keywords" content="AIBridges, AI Bridges, IT support Providence RI, IT support Rhode Island, computer repair Providence, tech support Cranston RI, AI consulting Rhode Island, managed IT services Providence, small business IT support RI, computer help Warwick RI, IT services East Greenwich, network support Rhode Island, Microsoft 365 support Providence, Office 365 help RI, local IT company Rhode Island, AI automation Providence, business technology consulting RI">
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph / Social Meta Tags -->
@@ -23,6 +22,44 @@
     <meta name="geo.region" content="US-RI">
     <meta name="geo.placename" content="Cranston, Rhode Island">
     <link rel="canonical" href="https://aibridges.org/">
+
+    <!-- Schema.org LocalBusiness Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "AIBridges",
+      "description": "IT support, computer repair, and AI consulting for small businesses in Rhode Island",
+      "url": "https://aibridges.org",
+      "telephone": "+1-401-327-2971",
+      "email": "nick@aibridges.org",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Cranston",
+        "addressRegion": "RI",
+        "addressCountry": "US"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 41.7798,
+        "longitude": -71.4373
+      },
+      "areaServed": [
+        {"@type": "City", "name": "Providence", "addressRegion": "RI"},
+        {"@type": "City", "name": "Cranston", "addressRegion": "RI"},
+        {"@type": "City", "name": "Warwick", "addressRegion": "RI"},
+        {"@type": "City", "name": "East Greenwich", "addressRegion": "RI"},
+        {"@type": "City", "name": "Pawtucket", "addressRegion": "RI"},
+        {"@type": "State", "name": "Rhode Island"}
+      ],
+      "priceRange": "$$",
+      "openingHours": "Mo-Fr 08:00-18:00",
+      "sameAs": [
+        "https://www.linkedin.com/company/aibridges"
+      ],
+      "serviceType": ["IT Support", "Computer Repair", "AI Consulting", "Managed IT Services", "Network Support"]
+    }
+    </script>
 
     <!-- Theme Color for Mobile Browsers -->
     <meta name="theme-color" content="#0a0a0f">
