Add Ollama air-gap deployment guide (FBI style) for law firms

--- a/law-firms.html
+++ b/law-firms.html
@@ -773,7 +773,7 @@
             <div class="step">
                 <div class="step-num">1</div>
                 <h3>Private deployment</h3>
-                <p>Your data never leaves your infrastructure. On-premise or private cloud options available.</p>
+                <p>Your data never leaves your infrastructure. On-premise or private cloud options available. <a href="/ollama-airgap-guide" style="color: #4a9eff; text-decoration: underline;">Read our Air-Gap Deployment Guide →</a></p>
             </div>
             <div class="step">
                 <div class="step-num">2</div>
