Fix mobile responsive styles for providence-law-firms-ai page

--- a/providence-law-firms-ai.html
+++ b/providence-law-firms-ai.html
@@ -511,28 +511,78 @@
             }
             .hero-content {
                 padding: 100px 24px 40px;
+                text-align: center;
             }
             h1 {
                 font-size: 2rem;
+            }
+            h2 {
+                font-size: 1.5rem;
             }
             .badge {
                 backdrop-filter: blur(10px);
                 -webkit-backdrop-filter: blur(10px);
             }
-            .privacy-box { grid-template-columns: 1fr; text-align: center; }
+            .container {
+                padding: 0 16px;
+            }
+            .context-grid {
+                grid-template-columns: 1fr;
+                gap: 16px;
+            }
+            .context-card {
+                text-align: center;
+                padding: 24px 20px;
+            }
+            .context-card h3 {
+                font-size: 1.1rem;
+            }
+            .privacy-box { 
+                grid-template-columns: 1fr; 
+                text-align: center;
+                padding: 24px;
+                gap: 24px;
+            }
             .privacy-box .privacy-item { align-items: center; }
+            .privacy-list li {
+                justify-content: center;
+            }
             .nav-links { display: none; }
-            .cta-row { flex-direction: column; align-items: center; }
+            .cta-row { 
+                flex-direction: column; 
+                align-items: center;
+                gap: 12px;
+            }
             .btn {
                 width: 100%;
                 justify-content: center;
             }
-            .use-case-grid { grid-template-columns: 1fr; }
-            .use-case { text-align: center; align-items: center; }
+            .use-case-grid { 
+                grid-template-columns: 1fr;
+                gap: 20px;
+            }
+            .use-case { 
+                text-align: center; 
+                align-items: center;
+                padding: 24px 20px;
+            }
             .use-case-icon { margin: 0 auto 16px; }
-            .tool-card { text-align: center; }
+            .use-case h3 {
+                font-size: 1.1rem;
+            }
+            .tool-card { 
+                text-align: center;
+                padding: 24px 20px;
+            }
             .tool-card .tool-icon { margin: 0 auto 16px; }
-            .hero-content { text-align: center;
+            .section-header {
+                text-align: center;
+            }
+            .section-title {
+                font-size: 1.5rem;
+            }
+            section {
+                padding: 40px 0;
             }
         }
     </style>
@@ -636,7 +686,7 @@
                 <span class="section-tag">Our Legal Tools</span>
                 <h2 class="section-title">Built for Rhode Island Law Firms</h2>
             </div>
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 24px;">
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 24px;">
                 <!-- SwiftShot -->
                 <div style="background: var(--bg-card); border: 1px solid var(--border); border-radius: 16px; padding: 32px; position: relative; overflow: hidden;">
                     <div style="position: absolute; top: 16px; right: 16px; background: rgba(0, 225, 230, 0.2); color: var(--accent); padding: 4px 12px; border-radius: 20px; font-size: 0.75rem; font-weight: 700;">$29/seat/mo</div>
