--- a/index.html
+++ b/index.html
@@ -429,6 +429,9 @@
         }
 
         .logo {
+            display: flex;
+            align-items: center;
+            gap: 0.6rem;
             font-size: 1.5rem;
             font-weight: 800;
             background: linear-gradient(135deg, var(--primary), var(--accent));
@@ -440,9 +443,21 @@
             transition: transform 0.3s ease, filter 0.3s ease;
         }
 
+        .logo-icon {
+            width: 28px;
+            height: 28px;
+            opacity: 0.95;
+            transition: opacity 0.3s ease, transform 0.3s ease;
+        }
+
         .logo:hover {
             transform: scale(1.05);
             filter: brightness(1.1);
+        }
+
+        .logo:hover .logo-icon {
+            opacity: 1;
+            transform: scale(1.1);
         }
 
         .logo:focus-visible {
@@ -4161,7 +4176,10 @@
     <!-- Navigation -->
     <nav id="navbar" role="navigation" aria-label="Main navigation">
         <div class="nav-container">
-            <a href="#hero" class="logo" aria-label="AIBridges - Back to top">AIBridges</a>
+            <a href="/" class="logo" aria-label="AIBridges - Back to homepage">
+                <img src="ad-images/logo-white.svg" alt="" class="logo-icon" aria-hidden="true">
+                AIBridges
+            </a>
             <ul class="nav-links" role="menubar">
                 <li class="nav-dropdown">
                     <a href="#services" data-nav>Services</a>
