Remove email addresses (not set up yet)

--- a/index-focused.html
+++ b/index-focused.html
@@ -815,8 +815,8 @@
         <div class="container">
             <h2>Ready to Automate?</h2>
             <p>Tell us what your team spends too much time on. We'll show you how AI can handle it.</p>
-            <a href="mailto:nick@aibridges.org" class="btn">nick@aibridges.org</a>
-            <p style="margin-top: 1rem; font-size: 0.9rem;">Or call: (401) 555-0123 • Based in Cranston, RI</p>
+            <a href="tel:+14013272971" class="btn">Call (401) 327-2971</a>
+            <p style="margin-top: 1rem; font-size: 0.9rem;">Based in Cranston, RI</p>
         </div>
     </section>
 
