Add official RI Legislature source link, show more law text

--- a/ri-law-search.html
+++ b/ri-law-search.html
@@ -409,7 +409,7 @@
         <header>
             <h1>General Laws of the</h1>
             <div class="state">State of Rhode Island</div>
-            <div class="subtitle">Title 1 – 49 · Complete & Searchable</div>
+            <div class="subtitle">Title 1 – 49 · 32,849 Sections · <a href="https://webserver.rilegislature.gov/Statutes" target="_blank" style="color: var(--faded); text-decoration: underline;">Official Source</a></div>
             <div class="seal">STATE<br>OF<br>RHODE<br>ISLAND</div>
         </header>
 
@@ -435,7 +435,7 @@
         </section>
 
         <footer class="document-footer">
-            <span>Updated Feb 2026 · Not legal advice</span>
+            <span>Source: <a href="https://webserver.rilegislature.gov/Statutes" target="_blank">RI General Assembly</a> · Not legal advice</span>
             <a href="/law-firms">AI Tools for Attorneys →</a>
         </footer>
     </div>
@@ -505,7 +505,7 @@
         }
 
         function renderResult(r, num) {
-            let preview = (r.preview || '').substring(0, 600);
+            let preview = (r.preview || '').substring(0, 1500);
             currentQuery.split(/\s+/).forEach(w => {
                 if (w.length >= 3) preview = preview.replace(new RegExp(`(${w})`, 'gi'), '<mark>$1</mark>');
             });
@@ -529,8 +529,8 @@
                             <button class="action-btn" onclick="event.stopPropagation(); copyText('${citation}')">
                                 Copy Citation
                             </button>
-                            <button class="action-btn" onclick="event.stopPropagation(); window.open('https://law.justia.com/codes/rhode-island/', '_blank')">
-                                View on Justia
+                            <button class="action-btn" onclick="event.stopPropagation(); window.open('https://webserver.rilegislature.gov/Statutes/TITLE${r.chapterNumber.split('-')[0]}/INDEX.HTM', '_blank')">
+                                View Official Source
                             </button>
                         </div>
                         <div class="related-section" id="rel-${r.chapterNumber.replace(/\./g, '-')}">
