Show full law text in results

--- a/ri-law-search.html
+++ b/ri-law-search.html
@@ -505,7 +505,7 @@
         }
 
         function renderResult(r, num) {
-            let preview = (r.preview || '').substring(0, 1500);
+            let preview = (r.preview || '');
             currentQuery.split(/\s+/).forEach(w => {
                 if (w.length >= 3) preview = preview.replace(new RegExp(`(${w})`, 'gi'), '<mark>$1</mark>');
             });
