Add AIBridges site nav toolbar

--- a/ri-law-search.html
+++ b/ri-law-search.html
@@ -29,6 +29,51 @@
             min-height: 100vh;
         }
 
+        /* Site toolbar */
+        .site-nav {
+            background: #0a0a0f;
+            padding: 12px 24px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+        }
+        .site-nav a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 0.9rem;
+        }
+        .site-nav .logo {
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+        .site-nav .logo img {
+            height: 20px;
+        }
+        .site-nav .nav-links {
+            display: flex;
+            gap: 24px;
+        }
+        .site-nav .nav-links a {
+            color: #888;
+            transition: color 0.2s;
+        }
+        .site-nav .nav-links a:hover {
+            color: #fff;
+        }
+        .site-nav .cta-btn {
+            background: linear-gradient(135deg, #0051E6, #00E1E6);
+            padding: 8px 16px;
+            border-radius: 6px;
+            font-weight: 500;
+            color: #fff;
+        }
+        @media (max-width: 700px) {
+            .site-nav .nav-links { display: none; }
+        }
+
         .document {
             max-width: 900px;
             margin: 40px auto;
@@ -413,6 +458,20 @@
     </style>
 </head>
 <body>
+    <nav class="site-nav">
+        <a href="/" class="logo">
+            <img src="/ad-images/logo-white.svg" alt="AIBridges">
+            AIBridges
+        </a>
+        <div class="nav-links">
+            <a href="/law-firms">Law Firms</a>
+            <a href="/providence-law-firms-ai">Providence Lawyers</a>
+            <a href="/ai-consulting">AI Consulting</a>
+            <a href="/blog.html">Blog</a>
+            <a href="tel:+14013272971" class="cta-btn">Call Now</a>
+        </div>
+    </nav>
+
     <div class="document">
         <header>
             <h1>General Laws of the</h1>
