SEO: Optimize meta titles/descriptions for higher CTR

--- a/it-support.html
+++ b/it-support.html
@@ -9,8 +9,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Local Tech Support Providence RI | Same-Day IT Support | AIBridges</title>
-    <meta name="description" content="Local tech support in Providence and Rhode Island. Same-day on-site IT support, $75/hr or $500/mo managed. Local technicians based in Cranston. Call (401) 327-2971.">
+    <title>IT Support Rhode Island — $75/hr, No Contracts, Same-Day | AIBridges</title>
+    <meta name="description" content="Tired of waiting on hold? Local RI tech support that answers in under a minute. Flat $75/hr, no contracts, no surprise fees. Most issues fixed remotely in 15 minutes.">
     <meta name="keywords" content="local tech support, local tech support providence, it support rhode island, computer repair providence ri, tech support near me, it services cranston ri, local it support, computer help providence, managed it rhode island, small business it support ri">
     <meta name="geo.region" content="US-RI">
     <meta name="geo.placename" content="Providence, Rhode Island">
