--- a/law-firms.html
+++ b/law-firms.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI for Law Firms in Rhode Island | Document Review & Legal AI | AIBridges</title>
-    <meta name="description" content="How to reduce document review time for law firms. AI-powered legal document analysis, client intake automation, and research assistance. Save 2.4 hours daily. Free consultation.">
+    <title>AI for Rhode Island Law Firms — Save 2+ Hours Daily | AIBridges</title>
+    <meta name="description" content="RI law firms are using AI to draft documents in minutes, not hours. Client intake, document review, research — all automated. See how with a free demo.">
     <link rel="canonical" href="https://aibridges.org/law-firms">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet">
