--- a/providence-ri.html
+++ b/providence-ri.html
@@ -9,8 +9,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI & IT Services Providence RI | AIBridges - Local Tech Solutions</title>
-    <meta name="description" content="AIBridges provides professional AI consulting, IT support, and custom software development in Providence, Rhode Island. Local team, same-day support. Call (401) 327-2971.">
+    <title>IT Support Providence RI — I Answer in Under a Minute | AIBridges</title>
+    <meta name="description" content="Providence IT support that doesn't put you on hold. Local technician, same-day fixes, honest pricing ($75/hr). Serving downtown, East Side, Federal Hill. Text Nick now.">
     <meta name="keywords" content="AI services Providence RI, IT services Providence, tech support Rhode Island, AI consulting Providence, IT support near me">
     <meta name="geo.region" content="US-RI">
     <meta name="geo.placename" content="Providence, Rhode Island">
