--- a/cranston-ri.html
+++ b/cranston-ri.html
@@ -9,8 +9,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI & IT Services Cranston RI | AIBridges - Local Tech Solutions</title>
-    <meta name="description" content="AIBridges provides professional AI consulting, IT support, and custom software development in Cranston, Rhode Island. Local team, same-day support. Call (401) 327-2971.">
+    <title>IT Support & AI Consulting Cranston RI — Same-Day Service | AIBridges</title>
+    <meta name="description" content="Cranston's local IT guy. Computer problems fixed same-day, AI automation that actually works. 15 years serving RI businesses. Call/text Nick: (401) 327-2971.">
     <meta name="keywords" content="AI services Cranston RI, IT services Cranston, tech support Rhode Island, AI consulting Cranston, IT support near me">
     <meta name="geo.region" content="US-RI">
     <meta name="geo.placename" content="Cranston, Rhode Island">
