SEO: Match ai-consulting title to home page style

--- a/ai-consulting.html
+++ b/ai-consulting.html
@@ -9,8 +9,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Consulting Providence RI — Cut Costs 40% with Automation | AIBridges</title>
-    <meta name="description" content="AI consulting for Rhode Island businesses. We've helped local companies save 10+ hours/week with custom AI automation. Free 30-min strategy call — no pitch, just answers.">
+    <title>AIBridges | AI Consulting in Providence RI</title>
+    <meta name="description" content="AI consulting for small businesses in Providence, Cranston, and Rhode Island. Strategy, automation, and implementation that delivers real results. Free strategy session.">
     <meta name="keywords" content="ai consulting providence ri, ai consulting rhode island, ai strategy providence, artificial intelligence consulting ri, ai implementation rhode island, ai for small business providence, machine learning consulting ri">
     <meta name="geo.region" content="US-RI">
     <meta name="geo.placename" content="Providence, Rhode Island">
