--- a/youtube-trends.html
+++ b/youtube-trends.html
@@ -9,8 +9,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Trends Dashboard — What's Going Viral Right Now | AIBridges</title>
-    <meta name="description" content="See what's trending on YouTube in real-time. Free dashboard tracks viral videos, rising creators, and trending topics across all categories. Updated every hour.">
+    <title>AIBridges | YouTube Trends Dashboard</title>
+    <meta name="description" content="Free YouTube trends dashboard. Track trending videos, rising creators, and popular topics across categories and regions. Updated hourly.">
     <meta name="keywords" content="youtube trends dashboard, youtube trending videos, youtube analytics, viral video tracker, youtube trends tool, trending on youtube, youtube trend analysis">
     <link rel="canonical" href="https://aibridges.org/youtube-trends">
     
