Fix: Add missing id=services anchor for See Our Services button

--- a/index.html
+++ b/index.html
@@ -5106,7 +5106,7 @@
     </section>
 
     <!-- SERVICES -->
-    <section class="story" style="border-top: 1px solid #111;">
+    <section class="story" id="services" style="border-top: 1px solid #111;">
         <div class="story-inner">
             <p class="story-label">Services</p>
             <h2 class="story-title" style="text-align: center;">What I can help with.</h2>
