Add RI Law Search to Tools dropdown and mobile menu

--- a/index.html
+++ b/index.html
@@ -4167,6 +4167,7 @@
         <a href="products.html" data-mobile-link>Products</a>
         <a href="ri-report" data-mobile-link>RI Real Estate</a>
         <a href="realtors-ai" data-mobile-link>Realtors AI</a>
+        <a href="ri-law-search.html" data-mobile-link>RI Law Search</a>
         <a href="#demo" data-mobile-link>AI Demo</a>
         <a href="blog.html" data-mobile-link>Blog</a>
         <a href="#contact" data-mobile-link>Contact Us</a>
@@ -4208,6 +4209,7 @@
                         <a href="/youtube-trends">YouTube Trends</a>
                         <a href="/kb.html">Knowledge Base</a>
                         <a href="/css-tricks.html">CSS Tricks</a>
+                        <a href="/ri-law-search.html">RI Law Search</a>
                     </div>
                 </li>
                 <li class="nav-dropdown">
