Replace AIBridges logo with new suspension bridge SVG across all pages

--- a/blog-it-support-rhode-island.html
+++ b/blog-it-support-rhode-island.html
@@ -243,7 +243,7 @@
 <body>
     <nav class="nav">
         <div class="nav-content">
-            <a href="/" class="nav-logo">AIBridges</a>
+            <a href="/" class="nav-logo"><img src="/logo-bridge.svg" alt="" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">AIBridges</a>
             <div class="nav-links">
                 <a href="/#services">Services</a>
                 <a href="/#contact">Contact</a>
@@ -537,7 +537,7 @@
     </article>
     
     <footer class="footer">
-        <a href="/" class="nav-logo">AIBridges</a>
+        <a href="/" class="nav-logo"><img src="/logo-bridge.svg" alt="" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">AIBridges</a>
         <p>&copy; 2026 AIBridges · Cranston, Rhode Island · <a href="tel:4013272971" style="color: #888;">(401) 327-2971</a></p>
     </footer>
 </body>
