--- a/index.html
+++ b/index.html
@@ -4178,7 +4178,7 @@
     <nav id="navbar" role="navigation" aria-label="Main navigation">
         <div class="nav-container">
             <a href="/" class="logo" aria-label="AIBridges - Back to homepage">
-                <img src="ad-images/logo-white.svg" alt="" class="logo-icon" aria-hidden="true">
+                <img src="/logo-bridge.svg" alt="" class="logo-icon" aria-hidden="true">
                 AIBridges
             </a>
             <ul class="nav-links" role="menubar">
