--- a/newport-weddings-ai.html
+++ b/newport-weddings-ai.html
@@ -577,7 +577,7 @@
 <body>
     <nav class="nav">
         <div class="nav-container">
-            <a href="/" class="logo"><span class="logo-icon">△</span> AIBridges</a>
+            <a href="/" class="logo"><img src="/logo-bridge.svg" alt="" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">AIBridges</a>
             <div class="nav-links">
                 <a href="/newport-hospitality-ai">Hospitality</a>
                 <a href="/#services">Services</a>
