--- a/service-aws.html
+++ b/service-aws.html
@@ -294,7 +294,7 @@
 <body>
     <nav>
         <div class="container nav-inner">
-            <a href="/" class="logo">AIBridges</a>
+            <a href="/" class="logo"><img src="/logo-bridge.svg" alt="" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">AIBridges</a>
             <div class="nav-links">
                 <a href="/">Home</a>
                 <a href="/#services">Services</a>
