--- a/swiftshot.html
+++ b/swiftshot.html
@@ -553,7 +553,7 @@
 <body>
 
     <nav>
-        <a href="/" class="logo">AIBridges</a>
+        <a href="/" class="logo"><img src="/logo-bridge.svg" alt="" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">AIBridges</a>
         <div>
             <a href="/#services">Services</a>
             <a href="/contact">Contact</a>
