--- a/realtors-ai.html
+++ b/realtors-ai.html
@@ -563,7 +563,7 @@
 </head>
 <body>
     <nav>
-        <a href="/" class="logo">AIBridges</a>
+        <a href="/" class="logo"><img src="/logo-bridge.svg" alt="" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">AIBridges</a>
         <div>
             <a href="#solution">Solution</a>
             <a href="#faq">FAQ</a>
