--- a/services.html
+++ b/services.html
@@ -96,7 +96,7 @@
 <body>
     <nav class="nav" id="nav">
         <div class="nav-container">
-            <a href="/" class="logo"><span class="logo-icon">△</span><span class="logo-text">AIBridges</span></a>
+            <a href="/" class="logo"><img src="/logo-bridge.svg" alt="" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">AIBridges</a>
             <div class="nav-links">
                 <a href="/#services">Services</a>
                 <a href="/#products">Products</a>
