--- a/thank-you.html
+++ b/thank-you.html
@@ -291,7 +291,7 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <a href="index.html" class="logo">AIBridges</a>
+            <a href="index.html" class="logo"><img src="/logo-bridge.svg" alt="" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">AIBridges</a>
             <ul class="nav-links">
                 <li><a href="index.html#services">Services</a></li>
                 <li><a href="index.html#products">Products</a></li>
