Add white/dark bridge logo variants - white on dark pages, dark on light pages

--- a/blog-shift-trading-restaurant-staff.html
+++ b/blog-shift-trading-restaurant-staff.html
@@ -97,7 +97,7 @@
 <body>
     <nav class="nav">
         <div class="nav-container">
-            <a href="/" class="logo"><img src="/logo-bridge.svg" alt="" style="width:64px;height:64px;vertical-align:middle;margin-right:8px;">AIBridges</a>
+            <a href="/" class="logo"><img src="/logo-bridge-dark.svg" alt="" style="width:64px;height:64px;vertical-align:middle;margin-right:8px;">AIBridges</a>
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
                 <li><a href="/service-ai">AI Services</a></li>
