--- a/blog-ai-real-estate-agents-rhode-island.html
+++ b/blog-ai-real-estate-agents-rhode-island.html
@@ -51,7 +51,7 @@
 <body>
     <nav class="nav" id="nav">
         <div class="nav-container">
-            <a href="/" class="logo"><img src="/logo-bridge.svg" alt="" style="width:64px;height:64px;vertical-align:middle;margin-right:8px;">AIBridges</a>
+            <a href="/" class="logo"><img src="/logo-bridge-dark.svg" alt="" style="width:64px;height:64px;vertical-align:middle;margin-right:8px;">AIBridges</a>
             <div class="nav-links">
                 <a href="/blog">Blog</a>
                 <a href="/realtors-ai">Realtor AI</a>
